--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
     <title>History Flooder</title>
-    <link rel="icon" href="https://keenwa.x10.mx/burger.png" type="image/x-icon">
+    <link rel="icon" href="burger.png" type="image/x-icon">
     <style>
         body {
             background-color: #202225;
@@ -33,27 +34,31 @@
         button:hover {
             background-color: #424549;
         }
+
         shiny {
-        	color: #FFD700
+            color: #FFD700
         }
-        
+
         .blue {
-        	color: #7289da;
+            color: #7289da;
         }
-  
-	
     </style>
 </head>
+
 <body>
     <h1><u>PageFlood</u> <shiny>+</shiny></h1>
     <h2>Make sure to allow popups!</h2>
     <p>Step 1: Drag this tab into a new window.</p>
-	<p>Step 2: Type in the URL you want to flood your history with.</p>
-	<p>Step 3: Type how many times you want it to appear in your history. (preferably >100)</p>
-	<p>Step 4: Press the "Flood" button and unleash the tsunami.</p>
-	<p>Step 5: Close this window after all the pages load.</p>
-	<p>Step 5: Congratulations! Your history is now flooded with the URL of choice.</p>
-    <p>Check out <a href="https://nuclear-nc.x10.mx/histTsunami.html" class="blue">HistTsunami<a> (HistTsunami was made by my friend, NuclearNatoCat, and not by me. This flooder was made by me.)</p>
+    <p>Step 2: Type in the URL you want to flood your history with.</p>
+    <p>Step 2.5: You can also select "pre-selected" websites to flood with a list of unsuspicious websites. If you
+        select this option, the "Target URL" box will be ignored.</p>
+    <p>Step 3: Type how many times you want it to appear in your history. (preferably >100)</p>
+    <p>Step 4: Press the "Flood" button and unleash the tsunami.</p>
+    <p>Step 5: Close this window after all the pages load.</p>
+    <p>Step 5: Congratulations! Your history is now flooded with the URL of choice.</p>
+    <p>Check out <a href="https://nuclear-nc.x10.mx/histTsunami.html" class="blue">HistTsunami<a> (HistTsunami was made
+            by my friend, NuclearNatoCat, and not by me. This flooder was made by me.)</p>
+
     <label for="num">How Many Times:</label>
     <input type="number" id="num" placeholder="Enter a number" min="1" required><br>
 
@@ -61,7 +66,9 @@
     <input type="url" id="url" placeholder="Enter the URL" required><br>
 
     <button onclick="performHistoryFlooding()">Flood History</button>
+    <button onclick="performPreSelectedFlood()">Pre-Selected Website Flood</button>
 
     <script src="script.js"></script>
 </body>
+
 </html>
